k8s/base/evaluation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: toggle-master/evaluation-service:latest
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: toggle-master
spec:
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
