k8s/base/targeting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: toggle-master/targeting-service:latest
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: toggle-master
spec:
  selector:
    app: targeting-service
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
